Fixed header on mobile and changed footer colour

--- a/assets/styles/Header/providerLinkGeneral.css
+++ b/assets/styles/Header/providerLinkGeneral.css
@@ -14,6 +14,7 @@
     transition: background-color .218s, border-color .218s, box-shadow .218s;
     background-color: white;
     cursor: pointer;
+    min-width: fit-content;
 }
 
 .provider-wrapper:hover {
